# epic_battle_simulator

./: CMakeLists.txt  README.md
files/: launch.sh
files/commands/: 2_tower_sw_hun_battle.txt  4_swordsman_healer.txt  5_all_targets_reached_commands.txt  README  README.md  all_units_battle.txt  griffon_hunters_battle.txt  griffon_trail.txt  healer_sw_hunter.txt  swodsman_hunter_battle.txt  swordsman_hunter_griffon.txt  swordsman_hunter_tower.txt  swordsman_vs_hunter.txt  swordsman_vs_swordsman.txt  tower_vs_griffon.txt
src/: CMakeLists.txt  Simulator.cpp  Simulator.hpp  main.cpp
src/Core/: CMakeLists.txt  CreateMapHandler.cpp  CreateMapHandler.h  Event.hpp  EventHandler.hpp  MapCreatedHandler.cpp  MapCreatedHandler.h
src/IO/: CMakeLists.txt
src/IO/Commands/: SpawnGriffon.hpp  SpawnHealer.hpp  SpawnTower.hpp
src/IO/Core/: Hunter.cpp  Hunter.hpp  Map.cpp  Map.hpp  MapVisitor.hpp  Swordsman.cpp  Swordsman.hpp  Tower.cpp  Tower.hpp  Unit.cpp  Unit.hpp  UnitFactory.hpp  UnitParams.hpp  UnitParamsConverter.hpp  UnitParamsMapper.hpp  UnitVisitor.hpp
src/IO/Core/Units/: Griffon.cpp  Griffon.hpp  Healer.cpp  Healer.hpp  Hunter.cpp  Hunter.hpp  Swordsman.cpp  Swordsman.hpp  Tower.cpp  Tower.hpp  Unit.cpp  Unit.hpp
src/IO/Core/Units/helpers/: ActionResult.hpp
src/IO/Events/: AllTargetsReached.hpp  UnitHealed.hpp  UnitWon.hpp
src/IO/System/: CommandParser.hpp
tests/: CMakeLists.txt  map_tests.cpp  unit_tests.cpp
tests/SimulatorTests/: CMakeLists.txt  tests.cpp
tests/UnitTests/: CMakeLists.txt  tests.cpp
